implemented new download page for mobile

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,3 +8,4 @@ en:
   x_posts: 
     one: "1 Post"
     other: "%{count} Posts"
+  download_disabled: "Sorry, downloading is disabled by the developer of the app"
