change to local download for mobile

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,3 +9,4 @@ en:
     one: "1 Post"
     other: "%{count} Posts"
   download_disabled: "Sorry, downloading is disabled by the developer of the app"
+  download_swably: "Download Swably"
