--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -4,7 +4,7 @@ zh:
   lets_swap_apps: "让我们交换应用吧！"  
   x_posts: "%{count}条评论"
   download_disabled: "抱歉，这个应用的开发者禁止了下载"
-  
+  download_swably: "下载万宝乐"  
 
   date:
     abbr_day_names:
