--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -1,6 +1,7 @@
 zh:
+  swably: 万宝乐
   follow_us_on: "关注我们"
-  slogon: "上传，下载，评论应用"
+  slogon: "你需要什么应用？问万宝乐"
   lets_swap_apps: "让我们交换应用吧！"  
   x_posts: "%{count}条评论"
   download_disabled: "抱歉，这个应用的开发者禁止了下载"
