--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,7 @@ en:
   swably: Swably
   follow_us_on: "Follow us on"
   slogon: "What apps do you want?"
+  slogon_m: "What apps do you want?"
   lets_swap_apps: "Let's Swap Apps!"
   x_posts: 
     one: "1 Post"
