implemented feeds creation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,3 +12,14 @@ en:
     other: "%{count} Posts"
   download_disabled: "Sorry, downloading is disabled by the developer of the app"
   download_swably: "Download Swably"
+
+  # feed_title_follow: "%{name} is following you"
+  # feed_title_following_add_review: "%{name} add a post"
+  # feed_title_mention_review: "%{name} mention you to follow a post"
+  # feed_title_watching_add_reply: "%{name} reply the post you are following"
+  # feed_title_reply_my_review: "%{name} reply your post \"%{my_review}\""
+  feed_title_follow: "is following you"
+  feed_title_following_add_review: "add a post"
+  feed_title_mention_review: "mention you to follow %{name}'s post"
+  feed_title_watching_add_reply: "reply to the post you are following"
+  feed_title_reply_my_review: "reply to your post \"%{my_review}\""
