--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -15,11 +15,12 @@ zh:
   # feed_title_reply_my_review: "%{name}回复了你的评论“%{my_review}”"
   feed_title_follow: "开始关注你了"
   feed_title_following_add_review: "发布了一条评论"
+  feed_title_following_add_request: "发布了一个问题"
   feed_title_mention_review: "提醒你关注%{name}的帖子"
   feed_title_watching_add_reply: "在你关注的帖子下跟帖"
   feed_title_reply_my_review: "回复了你的帖子“%{my_review}”"
   feed_title_star_post: "收藏了你的帖子"
-  
+
   date:
     abbr_day_names:
     - 日
