--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,9 +19,10 @@ en:
   # feed_title_watching_add_reply: "%{name} reply the post you are following"
   # feed_title_reply_my_review: "%{name} reply your post \"%{my_review}\""
   feed_title_follow: "is following you"
-  feed_title_following_add_review: "add a post"
+  feed_title_following_app_add_review: "add a review about app %{name}"
+  feed_title_following_add_review: "add a review"
   feed_title_following_add_request: "add a request"
   feed_title_mention_review: "mention you to follow post of %{name}"
   feed_title_watching_add_reply: "reply to the post you are following"
   feed_title_reply_my_review: "reply to your post \"%{my_review}\""
-  feed_title_star_post: "starred your post"
+  feed_title_star_post: "star your post"
