--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -14,6 +14,7 @@ zh:
   # feed_title_watching_add_reply: "%{name}在你关注的评论下跟贴"
   # feed_title_reply_my_review: "%{name}回复了你的评论“%{my_review}”"
   feed_title_follow: "开始关注你了"
+  feed_title_following_app_add_review: "给应用%{name}发布了一条评论"
   feed_title_following_add_review: "发布了一条评论"
   feed_title_following_add_request: "发布了一个问题"
   feed_title_mention_review: "提醒你关注%{name}的帖子"
