--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -1,7 +1,7 @@
 zh:
   swably: 万宝乐
   follow_us_on: "关注我们"
-  slogon: "永不嫌多"
+  slogon: "应用永不嫌多"
   subtitle1: "万宝乐是一个安卓App分享社区"
   subtitle2: "你可以上传、下载、评论你喜欢的App"
   x_posts: "%{count}条评论"
