--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,6 +13,9 @@ en:
   download_disabled: "Sorry, downloading is disabled by the developer of the app"
   download_swably: "Download Swably"
   error_comment_id_not_exist: "This post is deleted"
+  recommend_text: "Swably is where I share and discuss apps with friends, come join me!"
+  recommend_swably_id: "13950"
+  download_in_weixin: "You can not download in Wechat. Just open it in a browser and download will work fine."
 
   # feed_title_follow: "%{name} is following you"
   # feed_title_following_add_review: "%{name} add a review"
