--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -8,6 +8,9 @@ zh:
   download_disabled: "抱歉，这个应用的开发者禁止了下载"
   download_swably: "下载万宝乐"  
   error_comment_id_not_exist: "这个帖子已经被删除了"
+  recommend_text: "万宝乐是朋友分享APP的网络，可以发现很多平时发现不了的APP。加入小伙伴们吧！"
+  recommend_swably_id: "14618"
+  download_in_weixin: "微信中无法下载。请点击右上角，选择‘在浏览器中打开’，即可正常下载。"
 
   # feed_title_follow: "%{name}开始关注你了"
   # feed_title_following_add_review: "%{name}发布了一条评论"
